# gpu

./: Agents.md  Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: main.rs
crates/application/src/application/: mod.rs  renderer.rs
crates/application/src/application/vertex/: mod.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs  prelude.rs
crates/gpu/src/adapter/: adapter_options.rs  mod.rs
crates/gpu/src/binding/: mod.rs  resource.rs  type_.rs
crates/gpu/src/binding/bind_group/: descriptor.rs  entry.rs  mod.rs
crates/gpu/src/buffer/: init_descriptor.rs  mod.rs
crates/gpu/src/color/: mod.rs
crates/gpu/src/color_target_state/: mod.rs
crates/gpu/src/command_encoder/: descriptor.rs  mod.rs
crates/gpu/src/convert/: mod.rs
crates/gpu/src/device/: descriptor.rs  mod.rs
crates/gpu/src/extent_3d/: mod.rs
crates/gpu/src/image/: mod.rs
crates/gpu/src/label/: mod.rs
crates/gpu/src/multisample_state/: mod.rs
crates/gpu/src/pipeline/layout/: descriptor.rs  mod.rs
crates/gpu/src/primitive_state/: mod.rs
crates/gpu/src/queue/: mod.rs
crates/gpu/src/render_pass/: color_attachment.rs  descriptor.rs  mod.rs
crates/gpu/src/render_pass/operations/: mod.rs
crates/gpu/src/render_pipeline/: descriptor.rs  mod.rs
crates/gpu/src/shader_module/: descriptor.rs  fragment_state.rs  mod.rs  vertex_state.rs
crates/gpu/src/surface/: configuration.rs  mod.rs
crates/gpu/src/texture/: descriptor.rs  mod.rs  sample_type.rs  sampler.rs  texel_copy_buffer_layout.rs  texel_copy_texture_info.rs
crates/gpu/src/vertex_format_map/: mod.rs
(+6 files in other folders)
